--- a/projectviewer.html
+++ b/projectviewer.html
@@ -151,7 +151,7 @@ function createTable(response){
           createTable(resp);
         }),lang.hitch(this,function(error){
           if (error.code==498) {
-            window.location.replace(redirectUri);
+            //window.location.replace(redirectUri);
             document.getElementById("ProjectName").innerHTML = "Try again <a href='" + redirectUri + "'>using this link</a>";
           } else {
             document.getElementById("OrgName").innerHTML = "Failed to retrieve record (" + error.details + ")";
