--- a/projectviewer.html
+++ b/projectviewer.html
@@ -76,7 +76,16 @@
   </style>
   <script src="https://js.arcgis.com/4.2/"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  <!-- Global site tag (gtag.js) - Google Analytics --
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156054783-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-156054783-1');
+  </script>
+  <!--end Google-->
   <script>
       var dojoConfig = {
         parseOnLoad: true
